# -----------------------------------------------------------------------------------------------------------
# Copyright (c) 2025 Huawei Technologies Co., Ltd.
# This program is free software, you can redistribute it and/or modify it under the terms and conditions of
# CANN Open Software License Agreement Version 2.0 (the "License").
# Please refer to the License for details. You may not use this file except in compliance with the License.
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
# INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
# See LICENSE in the root of the software repository for the full text of the License.
# -----------------------------------------------------------------------------------------------------------
#add_subdirectory(adda)
add_subdirectory(acp)
add_subdirectory(app)
add_subdirectory(common)
add_subdirectory(device)
add_subdirectory(driver)
add_subdirectory(job_wrapper)
add_subdirectory(message)
add_subdirectory(msprof)
add_subdirectory(transport)
add_subdirectory(streamio)
add_subdirectory(msprofbin)
add_subdirectory(stub_utest)
add_subdirectory(profapi)
add_subdirectory(profhal)
#add_subdirectory(avp)
#add_subdirectory(common_open)
add_subdirectory(driver_open)
add_subdirectory(job_wrapper_open)
#add_subdirectory(msprof_open)
#add_subdirectory(msprofbin_open)
